--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@octokit/rest": "^21.0.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
     "fumadocs-core": "12.3.3",
     "fumadocs-mdx": "8.2.33",
     "fumadocs-ui": "12.3.3",
@@ -23,8 +25,10 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
+    "clsx": "^2.1.1",
     "postcss": "^8.4.38",
     "tailwind-custom-utilities": "^1.0.5",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.2",
     "zod": "^3.23.8"
