--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
     "clsx": "^2.1.1",
+    "github-slugger": "^2.0.0",
     "postcss": "^8.4.38",
     "tailwind-custom-utilities": "^1.0.5",
     "tailwind-merge": "^2.3.0",
