--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "next-hub",
+  "name": "next-radar",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "post:merge": "git checkout main && git pull"
   },
   "dependencies": {
     "@octokit/rest": "^21.0.0",
