--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@octokit/rest": "^21.0.0",
     "@portabletext/react": "^3.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@sanity/image-url": "1",
     "@sanity/vision": "3",
@@ -20,6 +21,7 @@
     "fumadocs-core": "13.0.1",
     "fumadocs-mdx": "8.2.33",
     "fumadocs-ui": "13.0.1",
+    "lucide-react": "^0.417.0",
     "next": "^14.2.4",
     "next-sanity": "9",
     "react": "^18.3.1",
