--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@sanity/vision": "3",
     "@tailwindcss/typography": "^0.5.13",
     "class-variance-authority": "^0.7.0",
+    "date-fns": "^3.6.0",
     "fumadocs-core": "13.0.1",
     "fumadocs-mdx": "8.2.33",
     "fumadocs-ui": "13.0.1",
