--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.417.0",
     "next": "^14.2.4",
     "next-sanity": "9",
+    "nuqs": "^1.17.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
