--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "post:merge": "git checkout main && git pull"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.48",
     "@octokit/rest": "^21.0.0",
     "@portabletext/react": "^3.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -17,6 +18,7 @@
     "@sanity/image-url": "1",
     "@sanity/vision": "3",
     "@tailwindcss/typography": "^0.5.13",
+    "ai": "^3.3.9",
     "class-variance-authority": "^0.7.0",
     "date-fns": "^3.6.0",
     "fumadocs-core": "13.0.1",
@@ -30,9 +32,12 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0",
     "sanity": "3",
     "styled-components": "6",
-    "vaul": "^0.9.1"
+    "vaul": "^0.9.1",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/mdx": "^2.0.13",
