--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-markdown": "^9.0.1",
     "remark-gfm": "^4.0.0",
     "sanity": "3",
+    "sharp": "^0.33.5",
     "styled-components": "6",
     "vaul": "^0.9.1",
     "zustand": "^4.5.5"
