--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sanity/image-url": "1",
     "@sanity/vision": "3",
     "@tailwindcss/typography": "^0.5.13",
+    "@tanstack/react-query": "^5.59.0",
     "ai": "^3.3.9",
     "class-variance-authority": "^0.7.0",
     "date-fns": "^3.6.0",
@@ -33,6 +34,7 @@
     "nuqs": "^1.17.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
     "remark-gfm": "^4.0.0",
