--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "next lint",
     "start": "next start",
     "post:merge": "git checkout main && git pull",
-    "post:install": "fumadocs-mdx"
+    "post:install": "fumadocs-mdx",
+    "type-check": "tsc --noEmit -p tsconfig.json"
   },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.48",
