--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start": "next start",
     "post:merge": "git checkout main && git pull",
     "post:install": "fumadocs-mdx",
+    "cf:login": "p dlx cloudflared tunnel login",
+    "cf:run": "p dlx cloudflared tunnel --url http://localhost:3000",
     "type-check": "tsc --noEmit -p tsconfig.json"
   },
   "dependencies": {
@@ -16,13 +18,22 @@
     "@octokit/rest": "^21.0.0",
     "@portabletext/react": "^3.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-toggle-group": "^1.1.0",
     "@sanity/image-url": "1",
+    "@sanity/uuid": "^3.0.2",
     "@sanity/vision": "3",
+    "@t3-oss/env-nextjs": "^0.11.1",
     "@tailwindcss/typography": "^0.5.13",
     "@tanstack/react-query": "^5.59.0",
     "ai": "^3.3.9",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
+    "crypto": "^1.0.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.5.4",
     "fumadocs-core": "13.4.9",
@@ -32,6 +43,7 @@
     "lucide-react": "^0.417.0",
     "next": "^14.2.14",
     "next-sanity": "9",
+    "novel": "^0.5.0",
     "nuqs": "^1.17.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -42,6 +54,7 @@
     "sanity": "3",
     "sharp": "^0.33.5",
     "styled-components": "6",
+    "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
     "zustand": "^4.5.5"
   },
@@ -57,7 +70,7 @@
     "github-slugger": "^2.0.0",
     "postcss": "^8.4.38",
     "tailwind-custom-utilities": "^1.0.5",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.2",
     "zod": "^3.23.8"
