--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "styled-components": "6",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
+    "zsa": "^0.6.0",
+    "zsa-react": "^0.2.3",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
