--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^0.0.48",
     "@octokit/rest": "^21.0.0",
+    "@portabletext/editor": "^1.1.4",
     "@portabletext/react": "^3.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
@@ -43,7 +44,6 @@
     "lucide-react": "^0.417.0",
     "next": "^14.2.14",
     "next-sanity": "9",
-    "novel": "^0.5.0",
     "nuqs": "^1.17.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
