--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "remark-gfm": "^4.0.0",
     "sanity": "3",
     "sharp": "^0.33.5",
+    "slugify": "^1.6.6",
     "styled-components": "6",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
