--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "@octokit/rest": "^21.0.0",
     "@portabletext/editor": "^1.1.4",
     "@portabletext/react": "^3.1.0",
-    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-collapsible": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "@sanity/image-url": "1",
     "@sanity/uuid": "^3.0.2",
     "@sanity/vision": "3",
