--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "lucide-react": "^0.417.0",
     "next": "^14.2.14",
     "next-sanity": "9",
+    "next-themes": "^0.3.0",
     "nuqs": "^1.17.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
