--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@ai-sdk/openai": "^0.0.70",
     "@hookform/resolvers": "^3.9.1",
     "@octokit/rest": "^21.0.2",
-    "@portabletext/editor": "^1.1.10",
+    "@portabletext/editor": "^1.5.4",
     "@portabletext/react": "^3.1.0",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-collapsible": "^1.1.1",
@@ -37,6 +37,8 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@radix-ui/react-use-controllable-state": "^1.1.0",
     "@sanity/image-url": "1.0.2",
+    "@sanity/schema": "^3.62.3",
+    "@sanity/types": "^3.62.3",
     "@sanity/uuid": "^3.0.2",
     "@sanity/vision": "3.62.2",
     "@t3-oss/env-nextjs": "^0.11.1",
