--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "type-check": "tsc --noEmit -p tsconfig.json",
     "cf:login": "pnpm dlx cloudflared tunnel login",
     "cf:run": "pnpm dlx cloudflared tunnel --url http://localhost:3000",
-    "typegen": "npx sanity schema extract --path=./sanity/extract.json && npx sanity typegen generate",
-    "predev": "npm run typegen",
-    "prebuild": "npm run typegen"
+    "typegen": "npx sanity schema extract --path=./sanity/extract.json && npx sanity typegen generate"
   },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.70",
