--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-markdown": "^9.0.1",
     "remark-gfm": "^4.0.0",
     "sanity": "3.62.2",
+    "schema-dts": "^1.1.2",
     "sharp": "^0.33.5",
     "slugify": "^1.6.6",
     "styled-components": "6.1.13",
