--- a/package.json
+++ b/package.json
@@ -21,46 +21,46 @@
     "@portabletext/editor": "^1.6.1",
     "@portabletext/react": "^3.1.0",
     "@radix-ui/react-accordion": "^1.2.1",
-    "@radix-ui/react-checkbox": "^1.1.2",
-    "@radix-ui/react-collapsible": "^1.1.1",
-    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-collapsible": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-icons": "^1.3.1",
-    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-primitive": "^2.0.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.1",
-    "@radix-ui/react-toggle": "^1.1.0",
-    "@radix-ui/react-toggle-group": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.3",
+    "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-toggle": "^1.1.1",
+    "@radix-ui/react-toggle-group": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@radix-ui/react-use-controllable-state": "^1.1.0",
-    "@sanity/image-url": "1.0.2",
-    "@sanity/schema": "^3.63.0",
-    "@sanity/types": "^3.63.0",
+    "@sanity/image-url": "1.1.0",
+    "@sanity/schema": "^3.68.3",
+    "@sanity/types": "^3.68.3",
     "@sanity/uuid": "^3.0.2",
     "@sanity/vision": "3.62.3",
     "@t3-oss/env-nextjs": "^0.11.1",
     "@tailwindcss/typography": "^0.5.15",
-    "@tanstack/react-query": "^5.59.16",
+    "@tanstack/react-query": "^5.62.11",
     "ai": "^3.3.9",
     "axios": "^1.7.7",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.1",
-    "framer-motion": "^11.11.10",
+    "framer-motion": "^11.15.0",
     "ky": "^1.7.2",
     "lucide-react": "^0.456.0",
-    "next": "^14.2.17",
+    "next": "15.1.3",
     "next-sanity": "9.8.10",
-    "next-themes": "^0.4.3",
+    "next-themes": "^0.4.4",
     "nuqs": "^2.1.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.1",
-    "react-icons": "^5.3.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
     "react-markdown": "^9.0.1",
     "remark-gfm": "^4.0.0",
     "sanity": "3.62.2",
@@ -78,18 +78,24 @@
   "devDependencies": {
     "@types/mdx": "^2.0.13",
     "@types/node": "^20.17.6",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "autoprefixer": "^10.4.19",
+    "@types/react": "19.0.2",
+    "@types/react-dom": "19.0.2",
+    "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
     "eslint": "^8.57.1",
-    "eslint-config-next": "14.2.17",
+    "eslint-config-next": "15.1.3",
     "github-slugger": "^2.0.0",
-    "postcss": "^8.4.38",
+    "postcss": "^8.4.49",
     "tailwind-custom-utilities": "^1.0.5",
-    "tailwind-merge": "^2.5.4",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.5.2",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.2",
     "zod": "^3.23.8"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.0.2",
+      "@types/react-dom": "19.0.2"
+    }
   }
 }
