--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@portabletext/editor": "^1.6.1",
     "@portabletext/react": "^3.1.0",
     "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-collapsible": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
@@ -53,7 +54,7 @@
     "framer-motion": "^11.15.0",
     "ky": "^1.7.2",
     "lucide-react": "^0.456.0",
-    "next": "15.1.3",
+    "next": "15.2.4",
     "next-sanity": "9.8.10",
     "next-themes": "^0.4.4",
     "nuqs": "^2.1.1",
@@ -83,7 +84,7 @@
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
     "eslint": "^8.57.1",
-    "eslint-config-next": "15.1.3",
+    "eslint-config-next": "15.2.4",
     "github-slugger": "^2.0.0",
     "postcss": "^8.4.49",
     "tailwind-custom-utilities": "^1.0.5",
