--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@hookform/resolvers": "^3.9.1",
     "@octokit/rest": "^21.0.2",
     "@portabletext/editor": "^1.6.1",
-    "@portabletext/react": "^3.1.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.3",
@@ -72,9 +71,7 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
     "zsa": "^0.6.0",
-    "zsa-react": "^0.2.3",
-    "zsa-react-query": "^0.2.1",
-    "zustand": "^5.0.1"
+    "zsa-react-query": "^0.2.1"
   },
   "devDependencies": {
     "@types/mdx": "^2.0.13",
