--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
     "zsa": "^0.6.0",
-    "zsa-react-query": "^0.2.1"
+    "zsa-react-query": "^0.2.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/mdx": "^2.0.13",
